test-runner.log
2022-01-07 02:29:50 info: ------------------------------------------------------
2022-01-07 02:29:50 info: >>> Running Unit Test `ex1-doubleEvenNumbers.test` <<<
2022-01-07 02:29:50 info: ------------------------------------------------------
2022-01-07 02:29:51 info: All unit tests passed.
2022-01-07 02:29:52 info: All steps were completed successfully
2022-01-07 03:00:12 info: -------------------------------------------------
2022-01-07 03:00:12 info: >>> Running Unit Test `ex2-mondaysWorth.test` <<<
2022-01-07 03:00:12 info: -------------------------------------------------
2022-01-07 03:00:13 error: *** Unit Test Error Report ***

Command failed: npx jest ex2-mondaysWorth.test.js --colors
 FAIL  1-JavaScript/Week4/homework/ex2-mondaysWorth.test.js
  computeEarnings
    ✕ should take two parameters (1 ms)
    ✕ should compute the earnings as a formatted Euro amount (1 ms)

  ● computeEarnings › should take two parameters

    expect(received).toHaveLength(expected)

    Expected length:   2
    Received length:   0
    Received function: [Function computeEarnings]

      44 |     // The `.length` property indicates the number of parameters expected by
      45 |     // the function.
    > 46 |     expect(computeEarnings).toHaveLength(2);
         |                             ^
      47 |   });
      48 |
      49 |   test('should compute the earnings as a formatted Euro amount', () => {

      at Object.<anonymous> (1-JavaScript/Week4/homework/ex2-mondaysWorth.test.js:46:29)

  ● computeEarnings › should compute the earnings as a formatted Euro amount

    expect(received).toBe(expected) // Object.is equality

    Expected: "€187.50"
    Received: undefined

      50 |     const result = computeEarnings(mondayTasks, hourlyRate);
      51 |     const expected = '€187.50';
    > 52 |     expect(result).toBe(expected);
         |                    ^
      53 |   });
      54 | });
      55 |

      at Object.<anonymous> (1-JavaScript/Week4/homework/ex2-mondaysWorth.test.js:52:20)

Test Suites: 1 failed, 1 total
Tests:       2 failed, 2 total
Snapshots:   0 total
Time:        0.181 s
Ran all test suites matching /ex2-mondaysWorth.test.js/i.
2022-01-07 03:01:15 info: -------------------------------------------------
2022-01-07 03:01:15 info: >>> Running Unit Test `ex2-mondaysWorth.test` <<<
2022-01-07 03:01:15 info: -------------------------------------------------
2022-01-07 03:01:16 error: *** Unit Test Error Report ***

Command failed: npx jest ex2-mondaysWorth.test.js --colors
 FAIL  1-JavaScript/Week4/homework/ex2-mondaysWorth.test.js
  ● Test suite failed to run

    SyntaxError: /Users/Talha/Desktop/Homework-class35/1-JavaScript/Week4/homework/ex2-mondaysWorth.test.js: Unexpected token, expected "{" (34:49)

      32 | const hourlyRate = 25;
      33 |
    > 34 | function computeEarnings(mondayTasks, hourlyRate)) {
         |                                                  ^
      35 |   // TODO complete this function
      36 | }
      37 |

      at Parser._raise (node_modules/@babel/parser/src/parser/error.js:147:45)
      at Parser.raiseWithData (node_modules/@babel/parser/src/parser/error.js:142:17)
      at Parser.raise (node_modules/@babel/parser/src/parser/error.js:91:17)
      at Parser.unexpected (node_modules/@babel/parser/src/parser/util.js:190:16)
      at Parser.expect (node_modules/@babel/parser/src/parser/util.js:150:28)
      at Parser.parseBlock (node_modules/@babel/parser/src/parser/statement.js:921:10)
      at Parser.parseFunctionBody (node_modules/@babel/parser/src/parser/expression.js:2375:24)
      at Parser.parseFunctionBodyAndFinish (node_modules/@babel/parser/src/parser/expression.js:2348:10)
      at callback (node_modules/@babel/parser/src/parser/statement.js:1200:12)
      at Parser.withSmartMixTopicForbiddingContext (node_modules/@babel/parser/src/parser/expression.js:2849:14)

Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        0.23 s, estimated 1 s
Ran all test suites matching /ex2-mondaysWorth.test.js/i.
2022-01-07 03:01:17 error: *** ESLint Report ***

ex2-mondaysWorth.test.js
  34:50  error  Parsing error: Unexpected token )

✖ 1 problem (1 error, 0 warnings)


2022-01-07 03:01:36 info: -------------------------------------------------
2022-01-07 03:01:36 info: >>> Running Unit Test `ex2-mondaysWorth.test` <<<
2022-01-07 03:01:36 info: -------------------------------------------------
2022-01-07 03:01:36 error: *** Unit Test Error Report ***

Command failed: npx jest ex2-mondaysWorth.test.js --colors
 FAIL  1-JavaScript/Week4/homework/ex2-mondaysWorth.test.js
  computeEarnings
    ✓ should take two parameters (1 ms)
    ✕ should compute the earnings as a formatted Euro amount (1 ms)

  ● computeEarnings › should compute the earnings as a formatted Euro amount

    expect(received).toBe(expected) // Object.is equality

    Expected: "€187.50"
    Received: undefined

      50 |     const result = computeEarnings(mondayTasks, hourlyRate);
      51 |     const expected = '€187.50';
    > 52 |     expect(result).toBe(expected);
         |                    ^
      53 |   });
      54 | });
      55 |

      at Object.<anonymous> (1-JavaScript/Week4/homework/ex2-mondaysWorth.test.js:52:20)

Test Suites: 1 failed, 1 total
Tests:       1 failed, 1 passed, 2 total
Snapshots:   0 total
Time:        0.176 s
Ran all test suites matching /ex2-mondaysWorth.test.js/i.
2022-01-07 03:01:37 error: *** ESLint Report ***

ex2-mondaysWorth.test.js
  34:26  error  'mondayTasks' is defined but never used  no-unused-vars
  34:39  error  'hourlyRate' is defined but never used   no-unused-vars

✖ 2 problems (2 errors, 0 warnings)


2022-01-07 03:27:47 info: -------------------------------------------------
2022-01-07 03:27:47 info: >>> Running Unit Test `ex2-mondaysWorth.test` <<<
2022-01-07 03:27:47 info: -------------------------------------------------
2022-01-07 03:27:48 error: *** Unit Test Error Report ***

Command failed: npx jest ex2-mondaysWorth.test.js --colors
 FAIL  1-JavaScript/Week4/homework/ex2-mondaysWorth.test.js
  computeEarnings
    ✓ should take two parameters (1 ms)
    ✕ should compute the earnings as a formatted Euro amount (1 ms)

  ● computeEarnings › should compute the earnings as a formatted Euro amount

    expect(received).toBe(expected) // Object.is equality

    Expected: "€187.50"
    Received: undefined

      56 |     const result = computeEarnings(mondayTasks, hourlyRate);
      57 |     const expected = '€187.50';
    > 58 |     expect(result).toBe(expected);
         |                    ^
      59 |   });
      60 | });
      61 |

      at Object.<anonymous> (1-JavaScript/Week4/homework/ex2-mondaysWorth.test.js:58:20)

Test Suites: 1 failed, 1 total
Tests:       1 failed, 1 passed, 2 total
Snapshots:   0 total
Time:        0.177 s, estimated 1 s
Ran all test suites matching /ex2-mondaysWorth.test.js/i.
2022-01-07 03:27:49 error: *** ESLint Report ***

ex2-mondaysWorth.test.js
  34:26  error  'tasks' is defined but never used            no-unused-vars
  34:33  error  'rate' is defined but never used             no-unused-vars
  35:12  error  'computeEarnings' is defined but never used  no-unused-vars

✖ 3 problems (3 errors, 0 warnings)


2022-01-07 03:28:24 info: -------------------------------------------------
2022-01-07 03:28:24 info: >>> Running Unit Test `ex2-mondaysWorth.test` <<<
2022-01-07 03:28:24 info: -------------------------------------------------
2022-01-07 03:28:24 error: *** Unit Test Error Report ***

Command failed: npx jest ex2-mondaysWorth.test.js --colors
 FAIL  1-JavaScript/Week4/homework/ex2-mondaysWorth.test.js
  computeEarnings
    ✓ should take two parameters
    ✕ should compute the earnings as a formatted Euro amount (1 ms)

  ● computeEarnings › should compute the earnings as a formatted Euro amount

    expect(received).toBe(expected) // Object.is equality

    Expected: "€187.50"
    Received: "€187.5"

      55 |     const result = computeEarnings(mondayTasks, hourlyRate);
      56 |     const expected = '€187.50';
    > 57 |     expect(result).toBe(expected);
         |                    ^
      58 |   });
      59 | });
      60 |

      at Object.<anonymous> (1-JavaScript/Week4/homework/ex2-mondaysWorth.test.js:57:20)

Test Suites: 1 failed, 1 total
Tests:       1 failed, 1 passed, 2 total
Snapshots:   0 total
Time:        0.178 s, estimated 1 s
Ran all test suites matching /ex2-mondaysWorth.test.js/i.
2022-01-07 03:29:31 info: -------------------------------------------------
2022-01-07 03:29:31 info: >>> Running Unit Test `ex2-mondaysWorth.test` <<<
2022-01-07 03:29:31 info: -------------------------------------------------
2022-01-07 03:29:32 info: All unit tests passed.
2022-01-07 03:29:33 info: All steps were completed successfully
2022-01-07 03:46:21 info: -------------------------------------------------
2022-01-07 03:46:21 info: >>> Running Unit Test `ex2-mondaysWorth.test` <<<
2022-01-07 03:46:21 info: -------------------------------------------------
2022-01-07 03:46:22 info: All unit tests passed.
2022-01-07 03:46:23 info: All steps were completed successfully
